snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha512
9e23f6c13b169a7c45ea7b0980474e262ff42f9bc62d1c2cdec1e35d0d5dfb413f90db98d7f06b4161f7b14261eceb610d801e382fc34d27e081cfe178dd9261